--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       run: python -c "import sys; print(sys.version)"
     - name: Generate table
       run: |
-        pip install json2html
+        pip install pandas
         pip install pathlib
         python tablegenerator.py
     - name: Commit and Push
